crates/stef-parser/tests/snapshots/parser__print@attributes-min-ws.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/attributes-min-ws.stef
---
#[deprecated = "don't use", compress, validate(in_range(min = 100, max = 200), non_empty)]
struct Sample


