crates/stef-parser/tests/snapshots/parser__print@attributes.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "#[deprecated = \"don't use\", compress]\n#[validate(\n    in_range(min = 100, max = 200),\n    non_empty,\n)]\nstruct Sample"
input_file: crates/stef-parser/tests/inputs/attributes.stef
---
#[deprecated = "don't use", compress, validate(in_range(min = 100, max = 200), non_empty)]
struct Sample


