crates/stef-parser/tests/snapshots/parser__print@const-string.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/const-string.stef
---
const SIMPLE: string = "value";
const NEWLINE_ESCAPE: string = "one two three";
const ESCAPES: string = "escape basics \r\n \t \u{8} \u{c} \\ \"hello\" \nunicode ❤  emoji ❤ ";
const MULTILINE: string = "a\n    b\n    c\n";

