crates/stef-parser/tests/snapshots/parser__print@const_basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/const_basic.stef
---
const BOOL_TRUE: bool = true;
const BOOL_FALSE: bool = false;
const INT: u32 = 100;
const FLOAT: f64 = 5.5;
const STRING: string = "value";
const BYTES: bytes = [1, 2, 3];

