crates/stef-parser/tests/snapshots/parser__print@enum-basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/enum-basic.stef
---
/// Sample enum.
enum Sample {
    One @1,
    /// Second variant
    Two(u32 @1, u64 @2) @2,
    Three {
        field1: u32 @1,
        /// Second field of third variant
        field2: bool @2,
    } @3,
}


