crates/stef-parser/tests/snapshots/parser__print@enum_generics.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/enum_generics.stef
---
/// Enum with generics.
enum Sample<A, B, C, D> {
    One @1,
    Two(A @1, B @2) @2,
    Three {
        field1: C @1,
        field2: D @2,
    } @3,
}


